tests/error/modifier_errors/higher_order_flag_mismatch2.err
Error: Unitary flag mismatch (at $FILE:17:18)
   | 
15 | @guppy
16 | def test(q: qubit) -> None:
17 |     apply_unitary(dagger_only, q)
   |                   ^^^^^^^^^^^ Expected function with unitary flags: `unitary=True`, got:
   |                               `daggerable=True`

Guppy compilation failed due to 1 previous error
